Moving forwards force icon code, and starting to move to using AbstractDialog and the new save format in MekHQ.